--- a/app/src/main/res/layout-w900dp/estate_detail.xml
+++ b/app/src/main/res/layout-w900dp/estate_detail.xml
@@ -6,15 +6,30 @@
     android:layout_height="match_parent"
     android:layout_margin="10dp">
 
+    <TextView
+        android:id="@+id/tv_detail_sold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/sold"
+        android:textSize="50sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/rv_detail_photo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_detail_photo"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_detail_sold"
         tools:listitem="@layout/image_list_content" />
 
     <TextView
@@ -55,7 +70,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/tv_detail_title_description"
+                android:id="@+id/bt_detail_title_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
@@ -70,7 +85,7 @@
                 android:layout_margin="5dp"
                 android:padding="5dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_detail_title_description"
+                app:layout_constraintTop_toBottomOf="@id/bt_detail_title_description"
                 tools:text="@tools:sample/lorem/random" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -144,7 +159,7 @@
             app:layout_constraintTop_toBottomOf="@id/tv_detail_bathrooms" />
 
         <TableLayout
-            android:id="@+id/cl4"
+            android:id="@+id/tl_detail_interest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
@@ -250,7 +265,69 @@
 
         </TableLayout>
 
+        <TextView
+            android:id="@+id/tv_detail_map_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintStart_toEndOf="@id/tl_detail_interest"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="123 Appt75 \nMain street\nCentral park\n60006 NewYork"/>
 
+        <ImageView
+            android:id="@+id/iv_detail_map"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintStart_toEndOf="@id/tv_detail_map_address"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/ic_baseline_image_not_supported_24" />
+
+        <TextView
+            android:id="@+id/tv_detail_realtor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Realtor : Antoine Daniel"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iv_detail_map"/>
+
+        <TextView
+            android:id="@+id/tv_detail_entry_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Entry date : 01/01/1999"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_detail_realtor"
+            app:layout_constraintStart_toEndOf="@id/iv_detail_map"/>
+
+        <TextView
+            android:id="@+id/tv_detail_mod_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Modification : 02/02/1999"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_detail_entry_date"
+            app:layout_constraintStart_toEndOf="@id/iv_detail_map"
+            android:visibility="gone"
+            tools:visibility="visible"/>
+
+        <TextView
+            android:id="@+id/tv_detail_sold_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Sold on : 03/03/1999"
+            tools:visibility="visible"
+            android:visibility="gone"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_detail_mod_date"
+            app:layout_constraintStart_toEndOf="@id/iv_detail_map"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
