--- a/app/src/main/res/layout/estate_list_content.xml
+++ b/app/src/main/res/layout/estate_list_content.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="10dp"
-    android:elevation="5dp">
+    android:layout_margin="10dp"
+    android:elevation="5dp"
+    android:background="@color/englishGreen50">
 
     <ImageView
         android:id="@+id/iv_estate_content"
