--- a/app/src/main/res/layout/image_list_content.xml
+++ b/app/src/main/res/layout/image_list_content.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/iv_content_list"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,14 +22,13 @@
         android:id="@+id/tv_content_list"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
         android:textAppearance="?attr/textAppearanceListItem"
         android:gravity="center_horizontal"
+        android:textColor="@color/ocherDark"
+        android:background="#b3001500"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_content_list"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/iv_content_list"
         tools:text="Kitchen"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
