--- a/app/src/main/res/layout-w900dp/estate_list.xml
+++ b/app/src/main/res/layout-w900dp/estate_list.xml
@@ -6,6 +6,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cl_estate_list">
 
+    <TextView
+        android:id="@+id/tv_estate_list_search_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Search : 0 result"
+        android:gravity="center"
+        android:textStyle="italic|bold"
+        android:textSize="25sp"
+        android:layout_margin="10dp"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/rv_estate_list"/>
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
@@ -20,9 +35,21 @@
         android:layout_height="0dp"
         android:layout_margin="5dp"
         tools:listitem="@layout/estate_list_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_estate_list_search_result"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"/>
+        app:layout_constraintBottom_toTopOf="@id/bt_estate_list_clear_search"/>
+
+    <Button
+        android:id="@+id/bt_estate_list_clear_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/rv_estate_list"
+        android:layout_margin="10dp"
+        android:text="Clear search"
+        android:visibility="gone"
+        tools:visibility="visible"/>
 
     <FrameLayout
         android:id="@+id/fl_estate_detail_container"
@@ -33,8 +60,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
         app:layout_constraintTop_toTopOf="parent">
-
-<!--        <include layout="@layout/estate_detail" />-->
 
     </FrameLayout>
 
