--- a/app/src/main/res/layout/fragment_add_part_two.xml
+++ b/app/src/main/res/layout/fragment_add_part_two.xml
@@ -8,100 +8,79 @@
     android:padding="10dp"
     tools:context=".activity.addoredit.fragment.partone.AOEPartOneFragment">
 
-    <TextView
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tv_add_bedrooms"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/bedrooms"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:drawableStartCompat="@drawable/bedrooms"
-        app:layout_constraintBottom_toBottomOf="@id/et_add_bedrooms"
+        android:hint="@string/bedrooms"
+        app:layout_constraintBottom_toTopOf="@id/tv_add_bathrooms"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/et_add_bedrooms" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:startIconDrawable="@drawable/bedrooms">
 
-    <EditText
-        android:id="@+id/et_add_bedrooms"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        app:layout_constraintBottom_toTopOf="@id/et_add_bathrooms"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_add_bedrooms"
-        app:layout_constraintTop_toTopOf="parent" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_add_bedrooms"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number" />
 
-    <TextView
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tv_add_bathrooms"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/bathrooms"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:drawableStartCompat="@drawable/bathrooms"
-        app:layout_constraintBottom_toBottomOf="@id/et_add_bathrooms"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/et_add_bathrooms" />
-
-    <EditText
-        android:id="@+id/et_add_bathrooms"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:inputType="number"
+        android:hint="@string/bathrooms"
         app:layout_constraintBottom_toTopOf="@id/tv_add_description"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_add_bathrooms"
-        app:layout_constraintTop_toBottomOf="@id/et_add_bedrooms" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_add_bedrooms"
+        app:startIconDrawable="@drawable/bathrooms">
 
-    <TextView
+        <EditText
+            android:id="@+id/et_add_bathrooms"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tv_add_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/description"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:drawableStartCompat="@drawable/text"
-        app:layout_constraintBottom_toTopOf="@id/sv_add"
+        android:hint="@string/description"
+        app:layout_constraintBottom_toTopOf="@id/tv_add_realtor"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_add_bathrooms" />
+        app:layout_constraintTop_toBottomOf="@id/tv_add_bathrooms"
+        app:startIconDrawable="@drawable/text">
 
-    <ScrollView
-        android:id="@+id/sv_add"
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_add_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tv_add_realtor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/et_add_realtor"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:hint="@string/realtor"
+        app:startIconDrawable="@drawable/realtor"
+        app:layout_constraintBottom_toTopOf="@id/bt_two_next"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_add_description">
 
-        <EditText
-            android:id="@+id/et_add_description"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_add_realtor"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:inputType="textMultiLine" />
-    </ScrollView>
+            android:layout_height="wrap_content"
+            android:inputType="text" />
 
-    <TextView
-        android:id="@+id/tv_add_realtor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/realtor"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:drawableStartCompat="@drawable/realtor"
-        app:layout_constraintBottom_toBottomOf="@id/et_add_realtor"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/et_add_realtor" />
-
-    <EditText
-        android:id="@+id/et_add_realtor"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@id/bt_two_next"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_add_realtor"
-        app:layout_constraintTop_toBottomOf="@id/sv_add" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/bt_two_next"
