--- a/app/src/main/res/layout/fragment_add_address.xml
+++ b/app/src/main/res/layout/fragment_add_address.xml
@@ -1,169 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#fff"
-    tools:context=".activity.addoredit.fragment.partone.AOEPartOneFragment"
-    android:padding="10dp">
+    android:padding="10dp"
+    tools:context=".activity.addoredit.fragment.partone.AOEPartOneFragment">
 
-    <TextView
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tv_add_number"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/number"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:drawableStartCompat="@drawable/number"
+        android:hint="@string/number"
+        app:helperText="@string/obligatory"
+        app:helperTextEnabled="true"
+        app:helperTextTextColor="#50ff0000"
+        app:layout_constraintBottom_toTopOf="@id/tv_add_complement"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/et_add_number"
-        app:layout_constraintBottom_toBottomOf="@id/et_add_number"/>
-
-    <EditText
-        android:id="@+id/et_add_number"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_add_number"
-        app:layout_constraintBottom_toTopOf="@id/et_add_complement"
-        android:inputType="number" />
+        app:startIconDrawable="@drawable/number">
 
-    <TextView
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_add_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tv_add_complement"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/complement"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:drawableStartCompat="@drawable/complement"
+        android:hint="@string/complement"
+        app:layout_constraintBottom_toTopOf="@id/tv_add_street"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/et_add_complement"
-        app:layout_constraintBottom_toBottomOf="@id/et_add_complement"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_add_number"
+        app:startIconDrawable="@drawable/complement">
 
-    <EditText
-        android:id="@+id/et_add_complement"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/et_add_number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_add_complement"
-        app:layout_constraintBottom_toTopOf="@id/et_add_street"
-        android:inputType="text" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_add_complement"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text" />
 
-    <TextView
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tv_add_street"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/street"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:drawableStartCompat="@drawable/street"
+        android:hint="@string/street"
+        app:helperText="@string/obligatory"
+        app:helperTextEnabled="true"
+        app:helperTextTextColor="#50ff0000"
+        app:layout_constraintBottom_toTopOf="@id/tv_add_district"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/et_add_street"
-        app:layout_constraintBottom_toBottomOf="@id/et_add_street"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_add_complement"
+        app:startIconDrawable="@drawable/street">
 
-    <EditText
-        android:id="@+id/et_add_street"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/et_add_complement"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_add_street"
-        app:layout_constraintBottom_toTopOf="@id/et_add_district"
-        android:inputType="text" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_add_street"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text" />
 
-    <TextView
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tv_add_district"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/district"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:drawableStartCompat="@drawable/district"
+        android:hint="@string/district"
+        app:helperText="@string/obligatory"
+        app:helperTextEnabled="true"
+        app:helperTextTextColor="#50ff0000"
+        app:layout_constraintBottom_toTopOf="@id/tv_add_city"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/et_add_district"
-        app:layout_constraintBottom_toBottomOf="@id/et_add_district"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_add_street"
+        app:startIconDrawable="@drawable/district">
 
-    <EditText
-        android:id="@+id/et_add_district"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/et_add_street"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_add_district"
-        app:layout_constraintBottom_toTopOf="@id/et_add_postcode"
-        android:inputType="text"
-        android:hint="@string/obligatory"
-        android:textColorHint="#50ff0000"/>
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_add_district"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text" />
 
-    <TextView
-        android:id="@+id/tv_add_postcode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/postcode"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:drawableStartCompat="@drawable/postcode"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/et_add_postcode"
-        app:layout_constraintBottom_toBottomOf="@id/et_add_postcode"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <EditText
-        android:id="@+id/et_add_postcode"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/et_add_district"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_add_postcode"
-        app:layout_constraintBottom_toTopOf="@id/et_add_city"
-        android:inputType="number" />
+    <!--    <TextView-->
+    <!--        android:id="@+id/tv_add_postcode"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:text="@string/postcode"-->
+    <!--        android:textSize="15sp"-->
+    <!--        android:textStyle="bold"-->
+    <!--        app:drawableStartCompat="@drawable/postcode"-->
+    <!--        app:layout_constraintBottom_toBottomOf="@id/et_add_postcode"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toTopOf="@id/et_add_postcode" />-->
 
-    <TextView
+    <!--    <EditText-->
+    <!--        android:id="@+id/et_add_postcode"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:inputType="number"-->
+    <!--        app:layout_constraintBottom_toTopOf="@id/et_add_city"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toEndOf="@id/tv_add_postcode"-->
+    <!--        app:layout_constraintTop_toBottomOf="@id/tv_add_district" />-->
+
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tv_add_city"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/city"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:drawableStartCompat="@drawable/city"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/et_add_city"
-        app:layout_constraintBottom_toBottomOf="@id/et_add_city"/>
-
-    <EditText
-        android:id="@+id/et_add_city"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/et_add_postcode"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_add_city"
+        android:hint="@string/city"
+        app:helperText="@string/obligatory"
+        app:helperTextEnabled="true"
+        app:helperTextTextColor="#50ff0000"
         app:layout_constraintBottom_toTopOf="@id/bt_address_next"
-        android:inputType="text"
-        android:hint="@string/obligatory"
-        android:textColorHint="#50ff0000"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_add_district"
+        app:startIconDrawable="@drawable/city">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_add_city"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/bt_address_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="25dp"
         android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
         android:text="@string/next"
-        android:layout_marginBottom="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/bt_address_back"/>
+        app:layout_constraintStart_toEndOf="@id/bt_address_back" />
 
     <Button
         android:id="@+id/bt_address_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="25dp"
         android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
         android:text="@string/previous"
-        android:layout_marginBottom="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/bt_address_next"/>
+        app:layout_constraintEnd_toStartOf="@id/bt_address_next"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
