--- a/app/src/main/res/layout/estate_detail.xml
+++ b/app/src/main/res/layout/estate_detail.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
-    android:background="@color/ocherLight">
+    android:background="@color/ocherLight"
+    android:tag="fragment_detail">
 
     <ScrollView
         android:layout_width="match_parent"
