--- a/app/src/main/res/layout/fragment_add_part_two.xml
+++ b/app/src/main/res/layout/fragment_add_part_two.xml
@@ -60,7 +60,9 @@
             android:id="@+id/et_add_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textMultiLine" />
+            android:inputType="textMultiLine"
+            android:maxLines="3"
+            android:ellipsize="middle"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
