--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/main_menu_sync"
+        android:icon="@drawable/ic_baseline_sync_24"
+        android:title="@string/sync"
+        app:showAsAction="ifRoom"/>
+
+    <item
         android:id="@+id/main_menu_add"
         android:icon="@drawable/ic_baseline_add_24"
         android:title="@string/add"
