--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="englishGreenDark">#001500</color>
 
     <color name="englishGreen50">#8000561b</color>
+    <color name="englishGreen30">#4d00561b</color>
 
     <color name="ocher">#fff196</color>
     <color name="ocherLight">#ffffc8</color>
