--- a/app/src/main/res/layout/estate_detail.xml
+++ b/app/src/main/res/layout/estate_detail.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
-    android:background="@color/ocherLight"
+    android:padding="10dp"
+    android:background="@color/englishGreenDark"
     android:tag="fragment_detail">
 
     <ScrollView
@@ -26,7 +27,6 @@
                 android:textStyle="bold|italic"
                 android:visibility="gone"
                 android:textColor="@color/ocherDark"
-                android:background="@color/englishGreen50"
                 app:layout_constraintBottom_toTopOf="@id/rv_detail_photo"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -49,9 +49,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                android:textColor="@color/englishGreenDark"
+                android:textSize="40sp"
+                android:textColor="@color/ocherDark"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/rv_detail_photo"
                 tools:text="Penthouse 7 rooms 200 m2" />
@@ -61,9 +60,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:textSize="20sp"
-                android:textStyle="italic"
-                android:textColor="@color/englishGreenDark"
+                android:textSize="35sp"
+                android:textColor="@color/ocherDark"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_detail_fast_description"
                 tools:text="3 000 000 $" />
@@ -78,12 +76,12 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_detail_price">
 
                 <Button
+                    android:background="@drawable/button_style"
                     android:id="@+id/bt_detail_detail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Show detail"
-                    android:textColor="@color/ocherDark"
-                    android:background="@color/englishGreen50"
+                    android:textAlignment="center"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@id/cl3" />
@@ -98,7 +96,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/bt_detail_detail">
 
-                    <TableRow android:padding="10dp">
+                    <TableRow android:padding="10dp"
+                        android:gravity="center">
 
                         <TextView
                             android:id="@+id/tv_detail_surface"
@@ -106,6 +105,8 @@
                             android:layout_height="wrap_content"
                             android:textStyle="bold"
                             app:drawableStartCompat="@drawable/square"
+                            android:textColor="@color/ocherDark"
+                            android:textSize="25sp"
                             app:layout_constraintEnd_toStartOf="@id/tv_detail_rooms"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
@@ -116,6 +117,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textStyle="bold"
+                            android:textColor="@color/ocherDark"
+                            android:textSize="25sp"
                             app:drawableStartCompat="@drawable/rooms"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@id/tv_detail_surface"
@@ -128,13 +131,16 @@
                             android:layout_height="wrap_content"
                             android:text="@string/landsize"
                             android:textStyle="bold"
+                            android:textColor="@color/ocherDark"
+                            android:textSize="25sp"
                             app:drawableStartCompat="@drawable/landsize"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/tv_detail_rooms" />
                     </TableRow>
 
-                    <TableRow android:padding="10dp">
+                    <TableRow android:padding="10dp"
+                        android:gravity="center">
 
                         <TextView
                             android:id="@+id/tv_detail_bathrooms"
@@ -142,6 +148,8 @@
                             android:layout_height="wrap_content"
                             android:text="@string/bathrooms"
                             android:textStyle="bold"
+                            android:textColor="@color/ocherDark"
+                            android:textSize="25sp"
                             app:drawableStartCompat="@drawable/bathrooms"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@id/tv_detail_bedrooms"
@@ -153,6 +161,8 @@
                             android:layout_height="wrap_content"
                             android:text="@string/bedrooms"
                             android:textStyle="bold"
+                            android:textColor="@color/ocherDark"
+                            android:textSize="25sp"
                             app:drawableStartCompat="@drawable/bedrooms"
                             app:layout_constraintEnd_toStartOf="@id/tv_detail_bathrooms"
                             app:layout_constraintStart_toStartOf="@id/tv_detail_surface"
@@ -167,9 +177,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/description"
-                    android:textSize="20sp"
-                    android:textColor="@color/ocherDark"
-                    android:background="@color/englishGreen50"
+                    android:background="@drawable/button_style"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tl_detail_detail" />
 
@@ -189,8 +197,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Point of interest"
-                    android:textColor="@color/ocherDark"
-                    android:background="@color/englishGreen50"
+                    android:background="@drawable/button_style"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_detail_description" />
@@ -302,8 +309,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Map"
-                    android:textColor="@color/ocherDark"
-                    android:background="@color/englishGreen50"
+                    android:background="@drawable/button_style"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tl_detail_interest" />
@@ -322,10 +328,10 @@
                         android:id="@+id/tv_detail_map_address"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@id/iv_detail_map"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageView
                         android:id="@+id/iv_detail_map"
@@ -342,9 +348,8 @@
                     android:id="@+id/bt_detail_information"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/button_style"
                     android:text="Information"
-                    android:textColor="@color/ocherDark"
-                    android:background="@color/englishGreen50"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/cl_detail_map" />
@@ -353,46 +358,46 @@
                     android:id="@+id/cl_detail_information"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/bt_detail_information"
-                    android:visibility="gone">
+                    app:layout_constraintTop_toBottomOf="@id/bt_detail_information">
 
                     <TextView
                         android:id="@+id/tv_detail_realtor"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        tools:text="Realtor : Antoine Daniel"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"/>
+                        tools:text="Realtor : Antoine Daniel" />
 
                     <TextView
                         android:id="@+id/tv_detail_entry_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        tools:text="Entry date : 01/01/1999"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/tv_detail_realtor"
-                        app:layout_constraintStart_toStartOf="parent"/>
+                        tools:text="Entry date : 01/01/1999" />
 
                     <TextView
                         android:id="@+id/tv_detail_mod_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        tools:text="Modification : 02/02/1999"
-                        app:layout_constraintTop_toBottomOf="@id/tv_detail_entry_date"
-                        app:layout_constraintStart_toStartOf="parent"
                         android:visibility="gone"
-                        tools:visibility="visible"/>
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/tv_detail_entry_date"
+                        tools:text="Modification : 02/02/1999"
+                        tools:visibility="visible" />
 
                     <TextView
                         android:id="@+id/tv_detail_sold_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        tools:text="Sold on : 03/03/1999"
-                        tools:visibility="visible"
                         android:visibility="gone"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/tv_detail_mod_date"
-                        app:layout_constraintStart_toStartOf="parent"/>
+                        tools:text="Sold on : 03/03/1999"
+                        tools:visibility="visible" />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
