--- a/app/src/main/res/layout/estate_list_content.xml
+++ b/app/src/main/res/layout/estate_list_content.xml
@@ -4,14 +4,15 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="10dp"
+    android:layout_margin="5dp"
     android:elevation="5dp"
-    android:background="@color/englishGreen50">
+    android:padding="10dp"
+    android:background="@drawable/button_style">
 
     <ImageView
         android:id="@+id/iv_estate_content"
         android:layout_width="150dp"
-        android:layout_height="100dp"
+        android:layout_height="150dp"
         tools:src="@tools:sample/avatars"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,6 +29,9 @@
         android:textSize="25sp"
         android:visibility="gone"
         tools:visibility="visible"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="5dp"
         android:background="@color/englishGreenDark"
         app:layout_constraintStart_toStartOf="@id/iv_estate_content"
         app:layout_constraintEnd_toEndOf="@id/iv_estate_content"
@@ -40,8 +44,8 @@
         android:layout_height="wrap_content"
         tools:text="Penthouse"
         android:textStyle="bold"
-        android:textSize="25sp"
-        android:textColor="#000"
+        android:textSize="35sp"
+        android:textColor="@color/ocherDark"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toEndOf="@id/iv_estate_content"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -52,8 +56,8 @@
         android:layout_height="wrap_content"
         tools:text="Manhattan"
         android:textStyle="italic"
-        android:textColor="#005"
-        android:textSize="20sp"
+        android:textColor="@color/ocher"
+        android:textSize="25sp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         app:layout_constraintStart_toEndOf="@id/iv_estate_content"
@@ -65,7 +69,7 @@
         android:layout_height="wrap_content"
         tools:text="1 000 000 $"
         android:textStyle="normal"
-        android:textSize="22sp"
+        android:textSize="27sp"
         android:textColor="#a00"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
